# workout_helper

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
analysis/: base_info.ipynb
app/: settings.py
app/core/common/: dao.py  entity.py  exceptions.py  uow.py
app/core/common/base/: dao.py  entity.py  exceptions.py  result.py  types.py
app/core/common/cqs/: __init__.py  exceptions.py  handler.py  query.py
app/core/common/mediator/: __init__.py  command.py  exceptions.py  mediator_impl.py  mediator_protocol.py  usecase.py
app/core/dataset/: exceptions.py  handlers.py  protocols.py
app/core/user/dto/: user.py
app/core/user/entities/: __init__.py  user.py
app/core/user/exceptions/: auth.py  users.py
app/core/user/protocols/: __init__.py  token_gateway.py  tokens_storage_dao.py  user_dao.py  user_gateway.py
app/core/user/services/: auth_service.py
app/core/user/usecases/: auth_service.py  user_service.py
app/core/workout/entities/: __init__.py  liked_grounds.py  sports_ground.py
app/core/workout/exceptions/: grounds.py
app/core/workout/protocols/: analysis.py  grounds_gateway.py
app/infrastructure/persistence/redis/: token_gateway.py
app/infrastructure/persistence/sqlalchemy/: alembic.ini  dao.py  uow.py  (+2 more)
app/infrastructure/user/: tokens_storage_dao.py  user_dao.py
app/infrastructure/worker/: analysis.py  dataset.py
app/interfaces/api/: factories.py  main.py
app/interfaces/celery/: factories.py  tasks.py  worker.py
app/presentation/api/: events.py  main.py
app/presentation/celery/: factories.py  tasks.py  worker.py
app/presentation/cli/: update_dataset.py
app/resources/: strings.py
deploy/: .env.example  Backend.Dockerfile  Celery.Dockerfile  docker-compose.yml
source/: data.xlsx  processed_data.csv
tests/: conftest.py  json_converter.py
tests/integration/api/: test_auth_controller.py  test_grounds_controller.py  test_users_controller.py
tests/integration/celery/: test_tasks.py
tests/integration/cli/: test_update_dataset.py
tests/unit/validations/: test_user_vo.py
(+113 files in other folders)
